<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".QuestionActivity"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/question_text"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/question">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:progress="0"
            android:max="5"
            android:minHeight="50dp"
            style="?android:progressBarStyleHorizontal"/>

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prog"
            android:layout_marginTop="10dp"
            android:textSize="20sp"
            android:padding="10dp"
            android:textColor="@color/black">
        </TextView>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opt1"
        android:id="@+id/opt_1"
        android:background="@drawable/question_option"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:gravity="center">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opt2"
        android:id="@+id/opt_2"
        android:background="@drawable/question_option"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:gravity="center">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opt3"
        android:id="@+id/opt_3"
        android:background="@drawable/question_option"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:gravity="center">
    </TextView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/opt4"
        android:id="@+id/opt_4"
        android:background="@drawable/question_option"
        android:padding="10dp"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:gravity="center">
    </TextView>
    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="Submit"
        android:textSize="16dp"
        android:textStyle="bold"/>
</LinearLayout>