<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".MainActivity"
android:orientation="vertical"
android:gravity="center"
android:background="#b8d2fc"
android:padding="7dp">

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/Quiz_text"
    android:gravity="center"
    android:textSize="25sp"
    android:textStyle="bold"
    android:textColor="@color/white"
    >
</TextView>
<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="5dp"
    android:layout_marginTop="20dp"
    app:cardElevation="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wel"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_text"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:gravity="center"
            android:layout_marginTop="10dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:id="@+id/input"
                android:inputType="text"
                android:autofillHints="Full Name"
                android:textColorHint="@color/black">
            </EditText>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/button"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textStyle="bold">

        </Button>
    </LinearLayout>
</androidx.cardview.widget.CardView>

</LinearLayout>